--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,12 +4,15 @@
     background-color: #2c3e50;
     color: #ffffff;
     padding: 30px;
-    justify-content: center;
+    justify-content: center; 
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .footer-left, .footer-right {
     max-width: 500px;
     line-height: 1.6;
+    margin-bottom: 20px;
 }
 
 .footer-logo {
@@ -53,11 +56,11 @@
     align-items: center;
     color: #ffffff;
     margin: 10px 0;
-    font-size: 16px; /* Adjust font size if needed */
+    font-size: 16px; 
 }
 
 .icon {
-    font-size: 20px; /* Adjust icon size */
+    font-size: 20px;
     color: #ffffff;
     margin-right: 10px;
 }
