--- a/src/components/admin landing page/admin.css
+++ b/src/components/admin landing page/admin.css
@@ -8,18 +8,13 @@ body {
   background-color: #e8f5e9;
 }
 
-.logo{
-  width: 520px;
-  height: 340px;
-}
-
 /* HomePage Styles */
 /* Hero Section */
 .hero-section {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url("Foto/city.jpg");
+  background: url("../../assets/img/city.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
