--- a/src/components/edukasi admin/edukasi_admin.css
+++ b/src/components/edukasi admin/edukasi_admin.css
@@ -8,24 +8,29 @@ body {
   background-color: #e8f5e9;
 }
 
-.container {
-  width: 90%;
+.edukasi-admin {
+
   margin: 0 auto;
-  padding: 20px 0;
+  
 }
-h1 {
+
+.edukasi-admin h1 {
   font-size: 60px;
-  font-weight: 800;
-  color: #3a3a3a;
+  font-weight: bold;
+  color: #263238;
+  margin-bottom: 20px;
   text-align: left;
+  line-height: 90px;
+  margin-top: 20px;
 }
+
 .grid {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-around;
 }
-.card {
+.artikel {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -37,7 +42,7 @@ h1 {
   color: inherit;
   margin-bottom: 10px;
 }
-.card img {
+.artikel img {
   width: 100%;
   height: 150px;
   object-fit: cover;
