warga siaga fix

--- a/src/components/setting/item.css
+++ b/src/components/setting/item.css
@@ -6,7 +6,7 @@
 
 @layer base {
   html {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins";
   }
 }
 
@@ -169,7 +169,8 @@ td {
   @apply py-4;
 }
 
-/* tr,
+tr,
 th {
   @apply border-b border-primary-tint-4;
-} */
+}
+
